# xime-grpc-socket-example

./: .gitignore  CLAUDE.md  README-vn.md  README.md
client/: README.md  conftest.py  pyproject.toml
client/app/: main.py
client/app/application/dto/: __init__.py  crypto.py
client/app/application/runner/: CryptoDemoRunner.py  VaultDemoRunner.py
client/app/application/usecase/: CryptoEngineCallerUseCase.py  VaultCallerUseCase.py
client/app/config/: dependency.py  grpc.py  scheduler.py
client/app/domain/trust/: Certificate.py  RootCertificate.py
client/app/integration/trust/bootstrap/: Bootstrap.py  (+2 more)
client/clients/: __init__.py
client/clients/vault/: __init__.py  _clients.py  _models.py
client/contracts/vault/: vault.proto
client/resources/: application.yml
client/runtime/security/: README.md
client/tests/socket/: test_crypto_caller.py
client/vault_grpc_client_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: README.md  conftest.py  proto.lock.json  pyproject.toml
server/app/: main.py
server/app/api/grpc/: VaultController.py
server/app/api/socket/: CryptoEngineController.py  __init__.py
server/app/application/dto/: crypto.py  vault.py
server/app/application/usecase/: CryptoEngineUseCase.py  VaultUseCase.py
server/app/config/: dependency.py  grpc.py  scheduler.py  socket.py
server/resources/: application.yml
server/runtime/security/: README.md
server/tests/grpc/: test_vault_usecase.py
server/tests/socket/: test_crypto_engine.py
server/vault_grpc_server_example.egg-info/: PKG-INFO  SOURCES.txt
(+26 files in other folders)
