[project]
name = "vault-grpc-client-example"
version = "0.1.0"
description = "Ví dụ tham khảo: client gRPC SDK + DI + mTLS động trên Xime Framework"
requires-python = ">=3.12"
dependencies = [
    # Cài Xime kèm extra gRPC + socket từ local:
    #   pip install -e "D:\\code\\xime\\xime framework"
    # rồi: pip install "xime[grpc]" "xime[socket]"
    "pydantic",
    "cryptography",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "apscheduler",
    "msgpack",             # serialize cho Socket adapter (xime[socket])
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["app", "clients"]
